flux/apps/observability/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - grafana.cbc.gewis.nl
  rules:
    - backendRefs:
        - name: grafana
          port: 80
