flux/apps/observability/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: router02.net.gewis.nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.cbc.gewis.nl`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls: {}
